[project]
name = "pyinputplus"
version = "0.2.12"
description = "Provides more featureful versions of input() and raw_input()."
readme = "README.md"
authors = [
    { name = "Al Sweigart", email = "al@inventwithpython.com" },
    { name = "Francesco Marchisotti", email = "francesco.marchisotti@gmail.com" },
]
license = { file = "LICENSE.txt" }
requires-python = ">=3.13"
dependencies = ["pysimplevalidate>=0.2.12"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    # "Programming Language :: Python",
    # "Programming Language :: Python :: 2",
    # "Programming Language :: Python :: 2.7",
    # "Programming Language :: Python :: 3",
    # "Programming Language :: Python :: 3.4",
    # "Programming Language :: Python :: 3.5",
    # "Programming Language :: Python :: 3.6",
    # "Programming Language :: Python :: 3.7",
    # "Programming Language :: Python :: 3.8",
    # "Programming Language :: Python :: 3.9",
    # "Programming Language :: Python :: 3.10",
    # "Programming Language :: Python :: 3.11",
    # "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-cov>=7.0.0"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=pyinputplus --cov-report=html"
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
extend = "~/.config/ruff/ruff.toml"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Ignore use of assert in tests
    "ARG",     # flake8-unused-arguments
    "FBT",     # flake8-boolean-trap
    "PLR2004", # magic-value-comparison
    "S311",    # suspicious-non-cryptographic-random-usage
    "SLF001",  # Private member accessed
]
